Help button mobile visibility fix (#1384)

--- a/themes/finna2/less/finna/tabs.less
+++ b/themes/finna2/less/finna/tabs.less
@@ -71,6 +71,7 @@
         padding-left: 0;
         color: @main-tabs-active-color;
         position: inherit;
+        z-index: 200;
         background-color: transparent;
         border: none;
         font-size: 18px;
